merge 4.2 to trunk